--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@harmony-js/core": "^0.1.36",
     "core-js": "^3.6.4",
     "vue": "^2.6.11"
   },
