--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@harmony-js/core": "^0.1.36",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "view-design": "^4.0.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
@@ -19,6 +21,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "vue-cli-plugin-iview": "~2.0.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
