--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "vue/html-self-closing": "off"
+      "vue/no-parsing-error": [2, { "x-invalid-end-tag": false }]
     }
   },
   "browserslist": [
